<resources>
    <string name="app_name">FIFA 13 Random Match Generator</string>
    <string name="random">Random!</string>
    <string name="vs.">VS</string>
    <string name="same_rating">Same rating</string>
    <string name="select_rating">Select rating</string>
    <string name="select_as_range">Select rating as range</string>
    <string name="to">to</string>
    <!--- TODO: Change "FIFA 13" if more FIFA versions are added to the app -->
    <string name="no_teams_message">No teams in FIFA 13 have the required characteristics</string>
    <string name="only_one_team_message">Only one team in FIFA 13 has the required
        characteristics</string>

    <string-array name="match_types">
        <item name="all_teams">All teams</item>
        <item name="international">International</item>
        <item name="non_international">Non international</item>
    </string-array>

    <string name="attack_short">ATT</string>
    <string name="midfield_short">MID</string>
    <string name="defense_short">DEF</string>
</resources>
