<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/team1Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <ImageView
            android:id="@+id/team1LogoView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="8dp"
            tools:srcCompat="@tools:sample/avatars" />

        <RatingBar
            android:id="@+id/team1RatingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-32dp"
            android:layout_marginTop="-9dp"
            android:layout_marginEnd="-32dp"
            android:layout_marginBottom="-12dp"
            android:clickable="false"
            android:isIndicator="true"
            android:scaleX="0.5"
            android:scaleY="0.5" />

        <LinearLayout
            android:id="@+id/team1ScoresTextViewGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team1AttackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/attack_short"
                android:textAlignment="center"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/team1MidfieldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/midfield_short"
                android:textAlignment="center"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/team1DefenseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:text="@string/defense_short"
                android:textAlignment="center"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/team1ScoresViewGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team1AttackScoreView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                tools:text="86" />

            <TextView
                android:id="@+id/team1MidfieldScoreView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                tools:text="84" />

            <TextView
                android:id="@+id/team1DefenseScoreView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                tools:text="84" />
        </LinearLayout>

        <TextView
            android:id="@+id/team1NameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:text="FC Barcelona" />

        <TextView
            android:id="@+id/team1CountryView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="España" />

        <TextView
            android:id="@+id/team1LeagueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="Liga BBVA" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/team2Layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <ImageView
            android:id="@+id/team2LogoView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="8dp"
            tools:srcCompat="@tools:sample/avatars" />

        <RatingBar
            android:id="@+id/team2RatingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-32dp"
            android:layout_marginTop="-9dp"
            android:layout_marginEnd="-32dp"
            android:layout_marginBottom="-12dp"
            android:clickable="false"
            android:isIndicator="true"
            android:scaleX="0.5"
            android:scaleY="0.5" />

        <LinearLayout
            android:id="@+id/team2ScoresTextViewGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team2AttackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/attack_short"
                android:textAlignment="center"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/team2MidfieldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/midfield_short"
                android:textAlignment="center"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/team2DefenseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:text="@string/defense_short"
                android:textAlignment="center"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/team2ScoresViewGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/team2AttackScoreView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                tools:text="84" />

            <TextView
                android:id="@+id/team2MidfieldScoreView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                tools:text="85" />

            <TextView
                android:id="@+id/team2DefenseScoreView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                tools:text="82" />
        </LinearLayout>

        <TextView
            android:id="@+id/team2NameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:text="Real Madrid" />

        <TextView
            android:id="@+id/team2CountryView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="España" />

        <TextView
            android:id="@+id/team2LeagueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="Liga BBVA" />
    </LinearLayout>

    <Button
        android:id="@+id/randomButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onRandomButtonClick"
        android:text="@string/random"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/vsText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vs."
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/team2Layout"
        app:layout_constraintEnd_toStartOf="@+id/team2Layout"
        app:layout_constraintStart_toEndOf="@+id/team1Layout"
        app:layout_constraintTop_toTopOf="@+id/team1Layout"
        app:layout_constraintVertical_bias="0.57" />

    <Switch
        android:id="@+id/sameRatingSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="onSameRatingSwitch"
        android:text="@string/same_rating"
        app:layout_constraintBottom_toTopOf="@+id/selectRatingSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/selectRatingSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onSelectRatingSwitch"
        android:text="@string/select_rating"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/customRatingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <RatingBar
        android:id="@+id/customRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:rating="4.5"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/randomButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Spinner
        android:id="@+id/matchTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorPrimaryDark"
        android:entries="@array/match_types"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/selectAsRangeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onSelectAsRangeSwitch"
        android:text="@string/select_as_range"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customRatingBar"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rangeRatingBarsViewGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/customRatingBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/customRatingBar">

        <TextView
            android:id="@+id/toTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/twoRatingBars"
            app:layout_constraintEnd_toEndOf="@+id/twoRatingBars"
            app:layout_constraintStart_toStartOf="@+id/twoRatingBars"
            app:layout_constraintTop_toTopOf="@+id/twoRatingBars"
            app:layout_constraintVertical_bias="0.41000003" />

        <LinearLayout
            android:id="@+id/twoRatingBars"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RatingBar
                android:id="@+id/minRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-16dp"
                android:layout_marginRight="-16dp"
                android:rating="3.0"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:visibility="visible"
                tools:visibility="visible" />

            <RatingBar
                android:id="@+id/maxRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-16dp"
                android:layout_marginRight="-16dp"
                android:rating="4.5"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:visibility="visible"
                tools:visibility="visible" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>